--- a/ecommerce-store/package.json
+++ b/ecommerce-store/package.json
@@ -17,7 +17,7 @@
     "cors": "^2.8.5",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.475.0",
-    "next": "15.1.6",
+    "next": "^15.2.3",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
