--- a/ecommerce-store/.eslintrc.json
+++ b/ecommerce-store/.eslintrc.json
@@ -1,12 +1,9 @@
 {
   "extends": [
-    "next/core-web-vitals",
-    "prettier"
+    "next/core-web-vitals"
   ],
   "rules": {
     "no-var": "error",
-    "@typescript-eslint/no-unused-vars": ["warn"],
-    "@typescript-eslint/no-explicit-any": "warn",
     "prefer-const": "warn"
   }
-} 
+}
