--- a/ecommerce-store/package.json
+++ b/ecommerce-store/package.json
@@ -14,9 +14,8 @@
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cors": "^2.8.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.475.0",
     "next": "14.1.0",
@@ -26,19 +25,18 @@
     "react-hot-toast": "^2.5.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.3"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.5",
+    "postcss": "^8",
     "prisma": "^5.10.2",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
