--- a/ecommerce-store/package.json
+++ b/ecommerce-store/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.2.0",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -26,6 +27,7 @@
     "react-hot-toast": "^2.5.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "web-vitals": "^4.2.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
