--- a/ecommerce-store/package.json
+++ b/ecommerce-store/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.5.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "web-vitals": "^4.2.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
