--- a/ecommerce-store/package.json
+++ b/ecommerce-store/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.11",
     "@headlessui/react": "^2.2.0",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -37,6 +39,7 @@
     "eslint": "^9.23.0",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "prisma": "^6.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.8.2"
   }
