--- a/ecommerce-store/package.json
+++ b/ecommerce-store/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.12.11",
+    "@clerk/backend": "^1.25.8",
+    "@clerk/nextjs": "^6.12.12",
     "@headlessui/react": "^2.2.0",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-slot": "^1.1.2",
@@ -32,7 +33,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.0.12",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
