--- a/ecommerce-store/package.json
+++ b/ecommerce-store/package.json
@@ -4,14 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 3002",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/backend": "^1.25.8",
     "@headlessui/react": "^2.2.0",
-    "@prisma/client": "^6.5.0",
     "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -26,23 +24,17 @@
     "react-hot-toast": "^2.5.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "web-vitals": "^4.2.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@clerk/nextjs": "^6.12.12",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19.0.12",
+    "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.28.0",
-    "@typescript-eslint/parser": "^8.28.0",
-    "eslint": "^9.23.0",
+    "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
-    "prisma": "^6.5.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.28.0"
+    "typescript": "^5"
   }
 }
